Chore: + fix scrollbar + separate + rename functions in Menu and Search components + fix css in Search component

--- a/src/layouts/components/Search/Search.module.scss
+++ b/src/layouts/components/Search/Search.module.scss
@@ -19,6 +19,7 @@
     input {
         flex: 1;
         height: 100%;
+        padding-right: 4rem;
         color: var(--black);
         font-family: var(--font-family);
         font-size: 1.6rem;
